Poprawki i czyszczenie stanu aplikacji